epserde/tests/fail/type_info_full_copy.rs
/*
 * SPDX-FileCopyrightText: 2026 Sebastiano Vigna
 *
 * SPDX-License-Identifier: Apache-2.0 OR LGPL-2.1-or-later
 */

use epserde::TypeInfo;

// full_copy(...) only affects the deserialization type generated by
// derive(Epserde); derive(TypeInfo) must reject it instead of silently
// ignoring it.
#[derive(TypeInfo)]
#[epserde(full_copy(T))]
struct Data<T> {
    a: T,
}

fn main() {}
