epserde/tests/fail/type_info_full_copy.stderr
error: "full_copy" has no effect on derive(TypeInfo); it only affects the deserialization type generated by derive(Epserde)
  --> tests/fail/type_info_full_copy.rs:13:21
   |
13 | #[epserde(full_copy(T))]
   |                     ^
